# farmcode

./: .gitignore  CLAUDE.md  DEVELOPMENT.md  README.md  TEST_ANALYSIS.md  mkdocs.sh  mkdocs.yml  pyproject.toml
.claude/commands/: speckit.plan.md  speckit.tasks.md
.github/workflows/: ci.yml  codeql.yml  docs.yml  release.yml
.plans/9999/: README.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  tasks-template.md
apps/backend/: README.md  pyproject.toml
apps/backend/config/: README.md  agents.yaml  farmcode.yaml
apps/backend/farmcode/: __init__.py  cli.py  config.py
apps/backend/farmcode/adapters/: __init__.py  base.py  github_adapter.py
apps/backend/farmcode/git/: __init__.py  worktree_manager.py
apps/backend/farmcode/mcp/: __init__.py  server.py
apps/backend/farmcode/models/: __init__.py  phase.py  state.py
apps/backend/farmcode/orchestrator/: __init__.py  agent_dispatcher.py  github_poller.py  orchestrator.py  phase_manager.py  state_machine.py
apps/backend/farmcode/storage/: __init__.py  state_store.py
apps/backend/tests/: README.md  conftest.py  test_github_poller.py  test_mvp_integration.py  test_phase_manager.py  test_state_machine.py  test_state_store.py  test_worktree_manager.py
docs/: README.md  index.md  mcp-tools-spec.md
docs/api/: agent-hub.html  agent-hub.md  baron.html  duc.html  index.md  marie.html  orchestrator.html  orchestrator.md
docs/architecture/: data-flow.md  index.md  services.md  (+2 more)
references/: sdlc-workflow.md  speckit-guide.md
scripts/: generate-api-docs.sh
tests/: conftest.py
(+113 files in other folders)
